# ros2_node

yolo_detector/: CMakeLists.txt  package.xml
yolo_detector/src/: yolo_detector_node.cpp
yolo_interface/: CMakeLists.txt  package.xml
yolo_interface/msg/: Detection.msg
